--- a/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/djbuddy.html
+++ b/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/djbuddy.html
@@ -26,7 +26,7 @@
 	<table>
 	</table>
 
-
+	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<script src="jquery-2.1.1.js"></script>
 	<script src="scripts.js"></script>
 	<script type="text/javascript">
