a whole mess of updates
working dougnut
colored pop ratings

--- a/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/djbuddy.html
+++ b/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/djbuddy.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width">
-	<title>DJ Buddy</title> 
+	<title> DJ Buddy</title> 
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
@@ -19,14 +19,7 @@
 
 
 	<header>
-		<h1>
-			<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="200px" height="100px">
-				<defs>
-					<path id="curvepath" fill="none" d="M10 40 C 30 10, 50 10, 100 40 S 130 0, 180 40" />
-				</defs>
-				<text><textPath xlink:href="#curvepath">DJ Buddy</textPath></text>
-			</svg>
-		</h1>
+		<h1>DJ Buddy</h1>
 	</header>
 
 	<main>
@@ -45,5 +38,6 @@
 	</table>
 	<div class="chart">
 	</div>
+	<div id="chart"></div>
 </body>
 </html>
