some stuff cant remember exactly

--- a/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/djbuddy.html
+++ b/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/djbuddy.html
@@ -22,7 +22,7 @@
 		<h1>DJ Buddy</h1>
 	</header>
 
-	<main>
+	<div class = 'playlist'>
 		<div id="myModal" class="modal">
 			<div class="modal-content">
 				<h2>Discogs Info</h2>
@@ -31,9 +31,9 @@
 			</div>
 
 		</div>
-	</main>
-	<nav>
-	</nav>
+	</div>
+	<div class = 'recommendations'>
+	</div>
 	<table>
 	</table>
 	<div class="chart">
