update and fixed tempo recs
sick!

--- a/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/djbuddy.html
+++ b/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/djbuddy.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width">
-	<title> DJ Buddy</title> 
+	<title>ChuneTooser</title> 
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
@@ -19,7 +19,7 @@
 
 
 	<header>
-		<h1>DJ Buddy</h1>
+		<h1>Chune Tooser</h1>
 	</header>
 
 	<div class = 'playlist'>
