--- a/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/djbuddy.html
+++ b/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/djbuddy.html
@@ -16,8 +16,11 @@
 			app.initialize();
 		});
 	</script>
-
-
+	<ul>
+		<li><a class="How2Use">How 2 Use</a></li>
+		<li><a class="BPMDonut">BPM Donut</a></li>
+		<li><a class="Contact">Contact</a></li>
+	</ul>
 	<header>
 		<h1>Chune Tooser</h1>
 	</header>
