working search bar

--- a/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/djbuddy.html
+++ b/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/djbuddy.html
@@ -13,14 +13,28 @@
 	<script src="scripts.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
-			app.initialize();
+			app.search();
 		});
 	</script>
+
+	<!-- search -->
+<!-- 	<div class="ital_text" id="userCount"></div>
+	<input id="searchInput" type="text" placeholder="search 4 ur playlist"></input><button type="button" class="btn btn-md btn-default-outline" id="playlistSearch">send</button> -->
+
+	<!-- nav bar -->
 	<ul>
 		<li><a class="How2Use">How 2 Use</a></li>
 		<li><a class="BPMDonut">BPM Donut</a></li>
 		<li><a class="Contact">Contact</a></li>
+		<!-- search -->
+		<li><a class="Search">
+		<div class="ital_text" id="userCount"></div>
+		<input id="searchInput" type="text" placeholder="search 4 ur playlist"></input>
+		<button type="button" class="btn btn-md btn-default-outline" id="playlistSearch">send</button>
+		</a></li>
 	</ul>
+
+	<!-- header -->
 	<header>
 		<h1>Chune Tooser</h1>
 	</header>
