got donut in nav modal
wow

--- a/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/djbuddy.html
+++ b/TylersMidtermProject/web-api-auth-examples-master/authorization_code/public/djbuddy.html
@@ -33,13 +33,22 @@
 	<header>
 		<h1>Chune Tooser</h1>
 	</header>
-			<div id="myModal" class="modal">
-			<div class="modal-content">
-				<table class='DiscogsInfo'>
-				</table>
-			</div>
-
+	<div id="myModal" class="modal">
+		<div class="modal-content">
+			<table class='DiscogsInfo'>
+			</table>
 		</div>
+	</div>
+
+	<div id="myNavModal" class="modal">
+		<div class="modal-content">
+			<div class ='info'>
+			</div>
+			<div class="chart">
+			</div>
+			<div id="pie"></div>
+		</div>
+	</div>
 
 	<div class = 'playlist'>
 	</div>
@@ -47,8 +56,5 @@
 	</div>
 	<table>
 	</table>
-	<div class="chart">
-	</div>
-	<div id="pie"></div>
 </body>
 </html>
